# OpenCL_Matrix_Multiply

./: CMakeLists.txt  LICENSE  README.md
sources/: cl_matrix_multiply.cpp  cl_matrix_multiply.hpp  main.cpp  matrix_multiply.cl
